OdeToFood almost finished

--- a/Betabit.Weather.WebApp/Betabit.Weather.WebApp.csproj
+++ b/Betabit.Weather.WebApp/Betabit.Weather.WebApp.csproj
@@ -6,10 +6,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Views\Shared\" />
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" version="2.0.2" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties package_1json__JSONSchema="http://json.schemastore.org/proxies" /></VisualStudio></ProjectExtensions>
 </Project>
