--- a/Betabit.Weather.WebApp/appsettings.json
+++ b/Betabit.Weather.WebApp/appsettings.json
@@ -1,6 +1,10 @@
 ﻿{
-  "Greeting":  "Hello!!",
+  "AzureAd": {
+    "ClientId": "f7eec4db-83eb-4404-af19-23da4f484f33",
+    "Authority": "https://login.microsoftonline.com/bd82c850-31e3-468e-a170-886174a9e22d"
+  },
+  "Greeting": "Hello!!",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "OdeToFood": "Server=(localdb)\\MSSQLLocalDB;Database=OdeToFood;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
