--- a/Betabit.Weather.WebApp/Properties/launchSettings.json
+++ b/Betabit.Weather.WebApp/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:50221/",
-      "sslPort": 0
+      "applicationUrl": "https://localhost:44338/",
+      "sslPort": 44338
     }
   },
   "profiles": {
